flip animation fixed on mobile devices

--- a/style.css
+++ b/style.css
@@ -311,6 +311,7 @@ h2 * {
   position: relative;
   transform-style: preserve-3d;
   transition: transform 0.6s ease;
+  transform: rotateY(0deg);
 }
 .flip-card-front, .flip-card-back {
   position: absolute;
